--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -5,13 +5,13 @@
         <div id="edit_review" class="visible">
             <h3>edit recipe:</h3>
             <div class="container" class="rec-review">
-                <h4><strong><u id="display-r-n"></u></strong></h4>
+                <h4><strong><u id="display-r-n">{{recipes.recipe_name}}</u></strong></h4>
                 <div class="row">
                     <div class="col s5">
-                        <span><strong>author: </strong><span>{{recipes.author_name}}</span></span>
+                        <span><strong>author: </strong><span id="display-auth">{{recipes.author_name}}</span></span>
                     </div>
                     <div class="col s5">
-                        <span><strong>weblink: </strong><span>{{recipes.weblink}}</span></span>
+                        <span><strong>weblink: </strong><span id="display-weblink">{{recipes.weblink}}</span></span>
                     </div>
                     <div class="col s2">
                         <a id="edit-info-btn" class="btn-floating btn-small red">
@@ -21,34 +21,34 @@
                 </div>
                 <div class="row">
                     <div class="col s5">
-                        <span><strong>serves: </strong><span>{{recipes.servings}}</span></span>
+                        <span><strong>serves: </strong><span id="display-serve">{{recipes.servings}}</span></span>
                     </div>
                     <div class="col s5">
-                        <span><strong>difficulty: </strong><span>{{recipes.rating}}</span></span>
+                        <span><strong>difficulty: </strong><span id="display-rating">{{recipes.rating}}</span></span>
                     </div>
 
                 </div>
                 <div class="row">
                     <div class="col s4">
-                        <span><strong> prep time: </strong><span>{{recipes.prep_time}}</u><span>
+                        <span><strong> prep time: </strong><span id="display-prep">{{recipes.prep_time}}</u><span>
                                     min</span></span></span>
                     </div>
-                    <div class="col s4"> <span><strong> cook time: </strong><span>{{recipes.cook_time}}</u><span></span>
+                    <div class="col s4"> <span><strong> cook time: </strong><span id="display-cook">{{recipes.cook_time}}</u><span></span>
                                 min</span></span></span>
                     </div>
-                    <div class="col s4"> <span><strong> total time: </strong><span><u id="display-total"></u><span>
+                    <div class="col s4"> <span><strong> total time: </strong><span id="display-total"><span>
                                     min</span></span></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s4">
-                        <span><strong>net carbs: </strong><span>{{recipes.carbs}}<span> g</span></span></span>
+                        <span><strong>net carbs: </strong><span id="display-carb">{{recipes.carbs}}<span> g</span></span></span>
                     </div>
                     <div class="col s2">
-                        <span><strong> fat: </strong><span>{{recipes.fat}}<span> g</span></span></span>
+                        <span><strong> fat: </strong><span id="display-fat">{{recipes.fat}}<span> g</span></span></span>
                     </div>
                     <div class="col s6">
-                        <span><strong> protein: </strong><span>{{recipes.protein}}<span> g</span></span></span>
+                        <span><strong> protein: </strong><span id="display-pro">{{recipes.protein}}<span> g</span></span></span>
                         <span><strong> per serving</strong></span>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                         <div style="height:0px;overflow:hidden">
                             <input type="file" id="fileInput" name="fileInput" />
                         </div>
-                        <img src="{{url_for('file', filename=recipes['image'])}}" id="preview" width="150px"
+                        <img src="{{url_for('file', filename=recipes['image'])}}" id="edit_preview" width="150px"
                             height="150px">
                     </div>
                     <div class="col s2">
@@ -71,7 +71,7 @@
                     <div class="col s10 m5">
                         <h6><u>ingredients:</u></h6>
                         <div>
-                            <ul>
+                            <ul id="display-ing">
                                 {% for ingredient in recipes.ingredients %}
                                 <li>
                                     <span>{{ingredient.amount}} {{ingredient.measurement}}
@@ -92,7 +92,7 @@
                 <h6><u>method:</u></h6>
                 <div class="row">
                     <div class="col s10">
-                        <ol>
+                        <ol id="display-method">
                             {% for method in recipes.method %}
                             <li>{{ method }} </li>
                             {% endfor %}
@@ -108,7 +108,8 @@
             <br>
             <br>
             <div>
-                <button id='edit-submitBtn' class="btn waves-effect waves-light" type="submit" name="action">Update Recipe
+                <button id='submitBtn' class="btn waves-effect waves-light" type="submit" name="action">Update
+                    Recipe
                     <i class="material-icons right">send</i>
                 </button>
             </div>
@@ -119,7 +120,7 @@
                 <h3>edit info</h3>
                 <div class="row">
                     <div class="input-field col s12 m6">
-                        <select id="edit_category" name="category_name" class="icons ">
+                        <select id="category" name="category_name" class="icons ">
                             <option disabled selected></option>
                             {% for cat in categories %}
                             {% if cat.category_name == recipes.category_name %}
@@ -134,40 +135,40 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12 m6">
-                            <input id="edit_name" name="recipe_name" type="text" value="{{recipes.recipe_name}}">
-                            <label for="edit_name">Recipe Name</label>
+                            <input id="recipe_name" name="recipe_name" type="text" value="{{recipes.recipe_name}}">
+                            <label for="recipe_t_name">Recipe Name</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12 m6">
-                            <input id="author_edit" name="author_name" type="text" class="validate"
+                            <input id="author_name" name="author_name" type="text" class="validate"
                                 value="{{recipes.author_name}}">
-                            <label for="author_edit">Author</label>
+                            <label for="author_name">Author</label>
                         </div>
                         <div class="input-field col s12 m6">
-                            <input value="{{recipes.weblink}}" id="edit_weblink" name="weblink" type="text"
+                            <input value="{{recipes.weblink}}" id="weblink" name="weblink" type="text"
                                 class="validate">
-                            <label for="edit_weblink">Weblink</label>
+                            <label for="weblink">Weblink</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12 m6">
-                            <input value="{{recipes.servings}}" id="edit_servings" name="servings" type="text"
+                            <input value="{{recipes.servings}}" id="servings" name="servings" type="text"
                                 class="validate">
-                            <label for="edit_servings">Servings</label>
+                            <label for="servings">Servings</label>
                         </div>
                         <div class="input-field col s12 m6">
-                            <input value="{{recipes.prep_time}}" id="prep_edit" name="prep_time" type="text"
+                            <input value="{{recipes.prep_time}}" id="prep_time" name="prep_time" type="text"
                                 class="validate">
-                            <label for="prep_edit">Prep Time</label>
+                            <label for="prep_time">Prep Time</label>
                         </div>
                         <div class="input-field col s12 m6">
-                            <input value="{{recipes.cook_time}}" id="cook_edit" name="cook_time" type="text"
+                            <input value="{{recipes.cook_time}}" id="cook_time" name="cook_time" type="text"
                                 class="validate">
-                            <label for="cook_edit">Cook Time</label>
+                            <label for="cook_time">Cook Time</label>
                         </div>
                         <div class="input-field col s12 m6">
-                            <select id="edit_rating" name="rating" class="icons ">
+                            <select id="rating" name="rating" class="icons ">
                                 <option></option>
                                 {% for rate in ratings %}
                                 {% if rate.rated == recipes.rating %}
@@ -182,18 +183,18 @@
                         </div>
                         <div class="row">
                             <div class="input-field col s12 m6">
-                                <input value="{{recipes.carbs}}" id="edit_carbs" name="carbs" type="text"
+                                <input value="{{recipes.carbs}}" id="carbs" name="carbs" type="text"
                                     class="validate">
-                                <label for="edit_carbs">Net Carbs</label>
+                                <label for="carbs">Net Carbs</label>
                             </div>
                             <div class="input-field col s12 m6">
-                                <input value="{{recipes.protein}}" id="edit_protein" name="protein" type="text"
+                                <input value="{{recipes.protein}}" id="protein" name="protein" type="text"
                                     class="validate">
-                                <label for="edit_protein">Protein</label>
+                                <label for="protein">Protein</label>
                             </div>
                             <div class="input-field col s12 m6">
-                                <input value="{{recipes.fat}}" id="edit_fat" name="fat" type="text" class="validate">
-                                <label for="edit_fat">Fat</label>
+                                <input value="{{recipes.fat}}" id="fat" name="fat" type="text" class="validate">
+                                <label for="fat">Fat</label>
                             </div>
                         </div>
                         <div class='review_recipe'>
@@ -204,55 +205,55 @@
                     </div>
                 </div>
             </div>
-            <!--Edit ingredients section-->
-            <div id="edit_ingredients" class=" hidden">
-                <div class="container">
-                    <div class="row">
-                        <h3>edit ingredients:</h3>
+        </div>
+        <!--Edit ingredients section-->
+        <div id="edit_ingredients" class=" hidden">
+            <div class="container">
+                <div class="row">
+                    <h3>edit ingredients:</h3>
+                </div>
+                <div>
+                    <ul id="editing-ingredients"></ul>
+                </div>
+                <div class="row">
+                    <div class="input-field col s2 ">
+                        <input placeholder="1" id="amount" name="amount" type="text" onfocus="this.value=''">
+                        <label for="amount">Amount</label>
+                    </div>
+                    <div class="input-field col s3">
+                        <select id='measurement' name='measurement' onfocus="this.value=''">
+                            <option value="" disabled selected></option>
+                            <option>cup/s</option>
+                            <option>g</option>
+                            <option>lrg</option>
+                            <option>lbs</option>
+                            <option>med</option>
+                            <option>ml</option>
+                            <option>oz</option>
+                            <option>sml</option>
+                            <option>tbsp</option>
+                            <option>tsp</option>
+                            <option></option>
+                        </select>
+                        <label>Measurement</label>
+                    </div>
+                    <div class="input-field col s6 ">
+                        <input placeholder="Ingredient" id="ingredient" name="ingredient" type="text"
+                            onfocus="this.value=''">
+                        <label for="ingredient">Ingredient</label>
                     </div>
                     <div>
-                        <ul id="editing-ingredients"></ul>
+                        <a id="add-ing" class="btn-floating btn-medium waves-effect waves-light red"><i
+                                class="material-icons">add</i></a>
                     </div>
-                    <div class="row">
-                        <div class="input-field col s2 ">
-                            <input placeholder="1" id="edit_amount" name="amount" type="text" onfocus="this.value=''">
-                            <label for="amount">Amount</label>
-                        </div>
-                        <div class="input-field col s3">
-                            <select id='edit_measurement' name='measurement' onfocus="this.value=''">
-                                <option value="" disabled selected></option>
-                                <option>cup/s</option>
-                                <option>g</option>
-                                <option>lrg</option>
-                                <option>lbs</option>
-                                <option>med</option>
-                                <option>ml</option>
-                                <option>oz</option>
-                                <option>sml</option>
-                                <option>tbsp</option>
-                                <option>tsp</option>
-                                <option></option>
-                            </select>
-                            <label>Measurement</label>
-                        </div>
-                        <div class="input-field col s6 ">
-                            <input placeholder="edit_Ingredient" id="ingredient" name="ingredient" type="text"
-                                onfocus="this.value=''">
-                            <label for="ingredient">Ingredient</label>
-                        </div>
-                        <div>
-                            <a id="ed-ing" class="btn-floating btn-medium waves-effect waves-light red"><i
-                                    class="material-icons">add</i></a>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <div class='review_recipe'>
-                        <a class="waves-effect waves-light btn review"><i class="material-icons left">refresh</i>Review
-                            Recipe</a>
-                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div class='review_recipe'>
+                    <a class="waves-effect waves-light btn review"><i class="material-icons left">refresh</i>Review
+                        Recipe</a>
                 </div>
             </div>
         </div>
@@ -263,26 +264,20 @@
                     <h3>add method:</h3>
                 </div>
                 <div>
-                    <ol id="edit-method"></ol>
+                     <ol id="adding-method"></ol>
                 </div>
                 <div class="row">
                     <div class="input-field col s10 ">
-                        <input placeholder="Method" id="edie_method" name="method" type="text" class="validate "
+                        <input placeholder="Method" id="method" name="method" type="text" class="validate "
                             onfocus="this.value=''">
                         <label for="method">
                         </label>
                     </div>
                     <div>
-                        <a id='edit_add-met' class="btn-floating btn-medium waves-effect waves-light red"><i
+                        <a id='add-met' class="btn-floating btn-medium waves-effect waves-light red"><i
                                 class="material-icons">add</i></a>
                     </div>
-                </div>
-
-                <br>
-                <br>
-
-                <br>
-                <br>
+                </div>               
                 <div class='review_recipe'>
                     <a class="waves-effect waves-light btn review"><i class="material-icons left">refresh</i>Review
                         Recipe</a>
@@ -292,7 +287,7 @@
         <!--Review Recipe section-->
 
 </form>
-<script src="{{url_for('static', filename='js/add.js')}}" type='text/javascript'>
+<script src="{{url_for('static', filename='js/edit.js')}}" type='text/javascript'>
 </script>
 
 {% endblock %}
